--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = "0.17.3"
+iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui" }
 
 [profile.dev]
 opt-level = 1
